<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10ssp"
        android:text="@string/choose_language"
        android:textColor="@color/yellowBG"
        android:padding="@dimen/_8ssp"
        android:textSize="@dimen/_20sdp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/en"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/button_without_borders"
                android:text="@string/English">
            </RadioButton>
            <RadioButton
                android:id="@+id/uz"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/button_without_borders"
                android:text="@string/Uzbek">
            </RadioButton>
            <RadioButton
                android:id="@+id/ki"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/button_without_borders"
                android:text="@string/Krill">
            </RadioButton>
            <RadioButton
                android:id="@+id/ru"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/button_without_borders"
                android:text="@string/Russian">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:gravity="end">
        <Button
            android:id="@+id/do_notSaveBTN"
            android:background="@drawable/button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/don_t_save"
            android:padding="@dimen/_12ssp"
            android:textAllCaps="false">
        </Button>
        <Button
            android:id="@+id/saveBTN"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/save"
            android:padding="@dimen/_12ssp"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/_10sdp">
        </Button>
    </LinearLayout>
</LinearLayout>