<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@drawable/background"
    tools:context=".HomeScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:gravity="bottom|center_horizontal"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alhamdulillah"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sdp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/timePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:text="@string/vaqt">

                </TextView>
                <TextView
                    android:id="@+id/timeTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:text="@string/_00_00">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:text="@string/umumiy">

                </TextView>
                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:text="@string/_0">

                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/counterpanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical">
            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sdp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slesh"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sdp">
            </TextView>
            <TextView
                android:id="@+id/zikrcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zikrcount"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sdp">
            </TextView>
        </LinearLayout>
<LinearLayout
    android:id="@+id/tasbeeh_surface"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal">
    <ImageView
        android:id="@+id/tasbeeh"
        android:layout_width="@dimen/_65ssp"
        android:layout_height="@dimen/_280sdp"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginBottom="@dimen/_30ssp"
        android:scaleType="fitXY"
        android:src="@drawable/tasbeeh_yellow_up"
        android:contentDescription="@string/tasbeeh">

    </ImageView>
</LinearLayout>
    </LinearLayout>
<LinearLayout
    android:id="@+id/buttonPanel1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_42sdp"
    android:gravity="center_vertical|center_horizontal"
    tools:ignore="UselessParent">
    <ImageView
        android:id="@+id/settings"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:src="@drawable/settings"
        android:scaleType="fitXY"
        android:contentDescription="@string/settings">
    </ImageView>
    <ImageView
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:src="@drawable/home"
        android:scaleType="fitXY"
        android:contentDescription="@string/home">
    </ImageView>
    <ImageView
        android:id="@+id/profile"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/profile"
        android:scaleType="fitXY"
        android:contentDescription="@string/profile">
    </ImageView>
</LinearLayout>
</LinearLayout>