<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assalomu_alaykum"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp">
            </TextView>
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_30sdp"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:text="@string/vaqtp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/umumiy_sarflangan_vaqt">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <TextView
                    android:id="@+id/totalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/_00_00">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/bir_kunda_o_rtacha_sarflangan_vaqt">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <TextView
                    android:id="@+id/averageTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/_00_00">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center_vertical|bottom">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/number_of_days_the_application_has_been_used">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <TextView
                    android:id="@+id/usedDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/_0">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:layout_marginTop="@dimen/_20sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:text="@string/zikrlar">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/_20sdp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/umumiy_aytilgan_zikrlar_soni">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_horizontal">
                <TextView
                    android:id="@+id/total_dhikr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/_0">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/bir_kunda_o_rtacha_aytilgan_zikrlar_soni">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center">
                <TextView
                    android:id="@+id/average_zikr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/_0">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:paddingRight="@dimen/_10sdp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginStart="@dimen/_12ssp"
                tools:ignore="RtlHardcoded,RtlSymmetry">
                <Button
                    android:id="@+id/reNameBTN"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:paddingStart="@dimen/_10ssp"
                    android:paddingEnd="@dimen/_10ssp"
                    android:textAllCaps="false"
                    android:text="@string/ismni_o_zgartirish">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginEnd="@dimen/_12ssp">
                <Button
                    android:id="@+id/shareBTN"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:paddingStart="@dimen/_10ssp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10ssp"
                    android:textAllCaps="false"
                    android:text="@string/ilovani_baham_ko_rish"
                    tools:ignore="RtlHardcoded">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:gravity="center_vertical|center_horizontal"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/settings"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:src="@drawable/settings"
            android:scaleType="fitXY"
            android:contentDescription="@string/settings">
        </ImageView>
        <ImageView
            android:id="@+id/home"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:src="@drawable/home"
            android:scaleType="fitXY"
            android:contentDescription="@string/home">
        </ImageView>
        <ImageView
            android:id="@+id/profile"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/profile"
            android:scaleType="fitXY"
            android:contentDescription="@string/profile">
        </ImageView>
    </LinearLayout>
</LinearLayout>