<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sozlamalar"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="bottom">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">
            <TextView
                android:id="@+id/settingsTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sozlamalar"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_25ssp"
            android:layout_marginEnd="@dimen/_25ssp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:scaleType="fitXY"
                android:src="@drawable/countersettings"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText">
            </ImageView>
            <TextView
                android:id="@+id/dhikrTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:text="@string/zikr_sozlamalari">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tasbehTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25ssp"
            android:layout_marginEnd="@dimen/_25ssp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:scaleType="fitXY"
                android:src="@drawable/tasbeeh"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText">
            </ImageView>

            <TextView
                android:id="@+id/tasbeehTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:text="@string/tasbeh_ko_rinishi"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25ssp"
            android:layout_marginEnd="@dimen/_25ssp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:scaleType="fitXY"
                android:src="@drawable/book"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText">
            </ImageView>
            <TextView
                android:id="@+id/languageTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:text="@string/til_sozlamalari">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25ssp"
            android:layout_marginEnd="@dimen/_25ssp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:scaleType="fitXY"
                android:src="@drawable/info"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText">
            </ImageView>
            <TextView
                android:id="@+id/aboutTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10ssp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:text="@string/dastur_haqida">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:gravity="center_vertical|center_horizontal"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/settings"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:src="@drawable/settings"
            android:scaleType="fitXY"
            android:contentDescription="@string/settings">
        </ImageView>
        <ImageView
            android:id="@+id/home"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:src="@drawable/home"
            android:scaleType="fitXY"
            android:contentDescription="@string/home">
        </ImageView>
        <ImageView
            android:id="@+id/profile"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/profile"
            android:scaleType="fitXY"
            android:contentDescription="@string/profile">
        </ImageView>
    </LinearLayout>
</LinearLayout>